--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
         - pip install -e .
         - git clone https://github.com/adafruit/Adafruit_CircuitPython_FeatherWing.git
         - cd Adafruit_CircuitPython_FeatherWing
-        - circuitpython-build-bundles --filename_prefix test-single .
+        - circuitpython-build-bundles --filename_prefix test-single --library_location .
 
     - stage: deploy
       python: "3.6"
