no harm in trying..

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: python
 python:
 - '3.6'
 
+before_deploy:
+  script:
+    - python3 -u -m circuitpython_build_tools.scripts.build_mpy_cross circuitpython_build_tools/data/
+
 matrix:
   include:
     - python: "3.6"
@@ -39,5 +43,3 @@ matrix:
       skip_cleanup: true
       on:
         tags: true
-      script:
-        - python3 -u -m circuitpython_build_tools.scripts.build_mpy_cross circuitpython_build_tools/data/
