--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
 - '3.6'
 
 before_deploy:
-  - python3 -u -m circuitpython_build_tools.scripts.build_mpy_cross circuitpython_build_tools/data/
+  script:
+    - python3 -u -m circuitpython_build_tools.scripts.build_mpy_cross circuitpython_build_tools/data/
 
 jobs:
   include:
