this rabbit hole is deep

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,17 @@ language: python
 python:
 - '3.6'
 
+stages:
+  - name: Tests
+    if: type = pull_request
+  - deploy
+
 jobs:
   include:
     - stage: Tests
+      name: "Test CircuitPython Bundle"
       python: "3.6"
-    - script:
+      script:
         - echo "Building mpy-cross" && echo "travis_fold:start:mpy-cross"
         - python3 -u -m circuitpython_build_tools.scripts.build_mpy_cross circuitpython_build_tools/data/
         - echo "travis_fold:end:mpy-cross"
@@ -17,10 +23,10 @@ jobs:
         - echo "travis_fold:end:clone"
         - cd Adafruit_CircuitPython_Bundle
         - circuitpython-build-bundles --filename_prefix test-bundle --library_location libraries --library_depth 2
-      name: "Test CircuitPython Bundle"
-      if: type = pull_request
 
-    - script:
+    - stage: Tests
+      name: "Test Sinble Library Bundle"
+      script:
         - echo "Building mpy-cross" && echo "travis_fold:start:mpy-cross"
         - python3 -u -m circuitpython_build_tools.scripts.build_mpy_cross circuitpython_build_tools/data/
         - echo "travis_fold:end:mpy-cross"
@@ -28,8 +34,6 @@ jobs:
         - git clone https://github.com/adafruit/Adafruit_CircuitPython_FeatherWing.git
         - cd Adafruit_CircuitPython_FeatherWing
         - circuitpython-build-bundles --filename_prefix test-single --library_location .
-      name: "Test CircuitPython Bundle"
-      if: type = pull_request
 
     - stage: deploy
       script:
